2001-08-12  Bart Schaefer  <schaefer@zsh.org>

	* Peter Breitenlohner: 14956: Makefile.in, Doc/Makefile.in,
	Test/Makefile.in: Fix various interactions of DESTDIR and use of
	multiple build targets, e.g. "make DESTDIR=/tmp all check info".

2001-08-09  Oliver Kiddle  <opk@zsh.org>

	* 15599: Completion/Unix/Command/_user_admin: detect redhat or
	mandrake before completing redhat's extensions

2001-08-06  Oliver Kiddle  <opk@zsh.org>

	* 15574: Completion/Unix/Command/_cvs, Completion/Unix/Type/_users,
	Completion/Unix/Command/_user_admin, Completion/Unix/Type/_groups,
	Completion/Unix/Type/_directories: new _user_admin completion for
	useradd, groupmod etc and remove redundant duplication in _cvs

	* 15562, Akinori Musha: 15559, 15563: Completion/BSD/Command/_chflags,
	Completion/Unix/Command/_chown, Completion/Unix/Command/_sysctl:
	new BSD completion and fix _chown for symlinks

	* 15577: Completion/Unix/Command/_grep,
	Completion/Unix/Command/_loadkeys: fix exclusion lists

2001-07-31  Clint Adams  <clint@zsh.org>

        * 15551: Completion/Unix/Command/_gzip: handle -l and -t
        as done for -d; only complete presumably compressed files.

2001-07-26  Oliver Kiddle  <opk@zsh.org>

	* 15503: Test/E01options.ztst: fix posixbuiltins test so that it
	isn't broken by the existence of a print external command.

2001-07-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 15487: Src/Zle/complete.c: fix for `--' before matches ignoring all
	-M options in compadd

2001-07-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 15470: Src/parse.c: remove nulargs in here strings

2001-07-20  Sven Wischnowsky  <wischnow@zsh.org>

	* 15433: Src/Zle/computil.c: don't use compsuffix when it might
	be freed; use the right variable in that loop there, dammit

2001-07-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 15402 (Akinora Musha): Completion/Unix/Command/_cvs: add
	support for -R option on BSDs

2001-07-17  Oliver Kiddle  <opk@zsh.org>
